Starter code for accepting/rejecting/revoking/sending invites

--- a/angular-client/src/app/components/social/friends-tab/friends-tab.component.html
+++ b/angular-client/src/app/components/social/friends-tab/friends-tab.component.html
@@ -18,10 +18,14 @@
     </mat-form-field>
   </form>
   <app-inbound-notifications
-    [friendRequests]="inboundFriendRequests"></app-inbound-notifications>
+    [friendRequests]="inboundFriendRequests"
+    [invites]="inboundInvites"
+    ></app-inbound-notifications>
   <app-friends-list
     [friends]="friends"
     [unviewedMessages]="unviewedMessages"></app-friends-list>
-  <app-outbound-friend-requests
-    [friendRequests]="outboundFriendRequests"></app-outbound-friend-requests>
+  <app-outbound-notifications
+    [friendRequests]="outboundFriendRequests"
+    [invites]="outboundInvites"
+    ></app-outbound-notifications>
 </div>
