--- a/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
@@ -29,6 +29,8 @@
       [friendsData]="friends$ | async"
       [inboundFriendRequestsData]="inboundFriendRequests$ | async"
       [outboundFriendRequestsData]="outboundFriendRequests$ | async"
+      [inboundInvitesData]="inboundInvites$ | async"
+      [outboundInvitesData]="outboundInvites$ | async"
       [unviewedMessages]="unviewedMessages$ | async">
     </app-friends-tab>
   </mat-tab>
