--- a/angular-client/src/app/components/social/friends-tab/friends-tab.component.html
+++ b/angular-client/src/app/components/social/friends-tab/friends-tab.component.html
@@ -19,13 +19,11 @@
   </form>
   <app-inbound-notifications
     [friendRequests]="inboundFriendRequests"
-    [invites]="inboundInvites"
-    ></app-inbound-notifications>
+    [invites]="inboundInvites"></app-inbound-notifications>
   <app-friends-list
     [friends]="friends"
     [unviewedMessages]="unviewedMessages"></app-friends-list>
   <app-outbound-notifications
     [friendRequests]="outboundFriendRequests"
-    [invites]="outboundInvites"
-    ></app-outbound-notifications>
+    [invites]="outboundInvites"></app-outbound-notifications>
 </div>
