--- a/angular-client/src/app/components/social/inbound-notifications/inbound-notifications.component.html
+++ b/angular-client/src/app/components/social/inbound-notifications/inbound-notifications.component.html
@@ -64,8 +64,6 @@
         >
       </td>
     </ng-container>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: invitesDisplayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: invitesDisplayedColumns"></tr>
   </table>
 </mat-expansion-panel>
