--- a/angular-client/src/app/components/social/outbound-notifications/outbound-notifications.component.html
+++ b/angular-client/src/app/components/social/outbound-notifications/outbound-notifications.component.html
@@ -47,8 +47,6 @@
         >
       </td>
     </ng-container>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: invitesDisplayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: invitesDisplayedColumns"></tr>
   </table>
 </mat-expansion-panel>
