Basic flow working for invites

--- a/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
+++ b/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
@@ -27,7 +27,7 @@
         <span
           *ngIf="panelOpenState"
           matTooltip="Invite Friend"
-          (click)="inviteFriend(); $event.stopPropagation()"
+          (click)="sendInvite(); $event.stopPropagation()"
           class="material-icons-outlined"
           aria-label="Invite friend"
           >group_add</span
