Notifications bubble fixes

--- a/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
@@ -21,7 +21,7 @@
       Friends
       <ng-container *ngIf="combinedNotifications$ | async as combinedNotif">
         <app-notification-badge
-          *ngIf="combinedNotif.hasData && activeTabIndex !== 0"
+          *ngIf="combinedNotif.hasData"
           [count]="combinedNotif.count"></app-notification-badge>
       </ng-container>
     </ng-template>
