--- a/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
@@ -27,10 +27,8 @@
     </ng-template>
     <app-friends-tab
       [friendsData]="friends$ | async"
-      [inboundFriendRequestsData]="inboundFriendRequests$ | async"
-      [outboundFriendRequestsData]="outboundFriendRequests$ | async"
-      [inboundInvitesData]="inboundInvites$ | async"
-      [outboundInvitesData]="outboundInvites$ | async"
+      [inboundNotificationsData]="inboundNotifications$ | async"
+      [outboundNotificationsData]="outboundNotifications$ | async"
       [unviewedMessages]="unviewedMessages$ | async">
     </app-friends-tab>
   </mat-tab>
