--- a/angular-client/src/app/components/social/outbound-notifications/outbound-notifications.component.html
+++ b/angular-client/src/app/components/social/outbound-notifications/outbound-notifications.component.html
@@ -8,45 +8,41 @@
       </h1>
     </mat-panel-title>
   </mat-expansion-panel-header>
-  <table mat-table [dataSource]="friendRequests" class="mat-elevation-z0">
+  <table mat-table [dataSource]="notifications" class="mat-elevation-z0">
     <ng-container matColumnDef="username">
       <td mat-cell *matCellDef="let element">
         {{ element.to.username }}
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="createdAt">
+      <td mat-cell *matCellDef="let element">
+        {{ element.createdAt | date: 'short' }}
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="action">
       <td class="right-justify" mat-cell *matCellDef="let element">
         <span
+          *ngIf="isFriendRequest(element); else revokeInviteTpl"
           matTooltip="Revoke Friend Request"
           (click)="revokeFriendRequest(element)"
-          class="material-icons"
-          >close</span
-        >
+          class="material-icons">
+          close
+        </span>
+        <ng-template #revokeInviteTpl>
+          <span
+            matTooltip="Revoke Invite"
+            (click)="revokeInvite(element)"
+            class="material-icons">
+            close
+          </span>
+        </ng-template>
       </td>
     </ng-container>
+
     <tr
       mat-row
-      *matRowDef="let row; columns: friendRequestsDisplayedColumns"></tr>
-  </table>
-
-  <table mat-table [dataSource]="invites" class="mat-elevation-z0">
-    <ng-container matColumnDef="username">
-      <td mat-cell *matCellDef="let element">
-        {{ element.to.username }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="action">
-      <td class="right-justify" mat-cell *matCellDef="let element">
-        <span
-          matTooltip="Revoke Invite"
-          (click)="revokeInvite(element)"
-          class="material-icons"
-          >close</span
-        >
-      </td>
-    </ng-container>
-    <tr mat-row *matRowDef="let row; columns: invitesDisplayedColumns"></tr>
+      *matRowDef="let row; columns: notificationsDisplayedColumns"></tr>
   </table>
 </mat-expansion-panel>
