--- a/angular-client/src/app/components/social/outbound-notifications/outbound-notifications.component.html
+++ b/angular-client/src/app/components/social/outbound-notifications/outbound-notifications.component.html
@@ -12,12 +12,13 @@
     <ng-container matColumnDef="username">
       <td mat-cell *matCellDef="let element">
         {{ element.to.username }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="createdAt">
-      <td mat-cell *matCellDef="let element">
-        {{ element.createdAt | date: 'short' }}
+        <span
+          [ngClass]="{
+            'friend-request-label': isFriendRequest(element),
+            'invite-label': !isFriendRequest(element)
+          }">
+          {{ isFriendRequest(element) ? 'Friend Request' : 'Invite' }}
+        </span>
       </td>
     </ng-container>
 
