Make reusable status bubble component

--- a/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
+++ b/angular-client/src/app/components/social/chat-cell/chat-cell.component.html
@@ -12,6 +12,13 @@
         class="online-status"
         [status]="friend.onlineStatus"></app-online-status>
       {{ friend.username }}
+
+      <app-status-bubble
+        *ngIf="friend.onlineStatus === 'online'"
+        class="status-bubble"
+        [toolTipText]="'Custom Game - Squad 3/4'"
+        [statusText]="'In Pregame Lobby'">
+      </app-status-bubble>
     </mat-panel-title>
     <mat-panel-description>
       <div class="icon-container">
