Inlcude hard coded status bubble in chat box

--- a/angular-client/src/app/components/social/chat-box/chat-box.component.css
+++ b/angular-client/src/app/components/social/chat-box/chat-box.component.css
@@ -70,3 +70,9 @@ textarea.mat-input-element {
 .is-typing {
   height: 20px;
 }
+
+.status-and-hint-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
