--- a/angular-client/src/app/components/social/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/social/chat-box/chat-box.component.html
@@ -45,7 +45,7 @@
     </mat-form-field>
     <div class="status-and-hint-container">
       <app-status-bubble
-        *ngIf="friend.onlineStatus === 'online'"
+        *ngIf="friend.status.presence === 'Online'"
         class="status-bubble"
         [toolTipText]="'Custom Game - Squad 3/4'"
         [statusText]="'In Pregame Lobby'">
