Made generic info bubble and now have status bubble as well

--- a/angular-client/src/app/components/misc/status-bubble/status-bubble.component.html
+++ b/angular-client/src/app/components/misc/status-bubble/status-bubble.component.html
@@ -1,7 +1,7 @@
-<span
-  [matTooltip]="disableToolTip ? null : toolTipText"
-  [style.background-color]="color"
-  [ngClass]="{ 'status-label': true }"
-  [class.disabled-tooltip]="disableToolTip">
-  {{ statusText }}
-</span>
+<app-info-bubble
+  *ngIf="status?.presence === 'Online'"
+  class="status-bubble"
+  [toolTipText]="status?.gameType"
+  [infoText]="status?.activity"
+  [color]="color">
+</app-info-bubble>
