--- a/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
+++ b/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.html
@@ -11,7 +11,7 @@
       class="presence"
       [size]="15"
       [readOnly]="false"
-      [presence]="user.status.presence"></app-presence>
+      [presence]="user?.status?.presence"></app-presence>
   </ng-container>
 </div>
 <mat-divider></mat-divider>
