--- a/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.css
+++ b/angular-client/src/app/components/social/social-sidenav/social-sidenav.component.css
@@ -8,7 +8,15 @@
   margin-bottom: 16px;
 }
 
+.navigation-menu {
+  margin-bottom: 16px;
+}
+
 .presence {
   margin-left: 8px;
   margin-bottom: 16px;
+}
+
+.flex-spacer {
+  flex-grow: 1;
 }
