Add invite friend menu to its own component. Add some join friend simulation logic to test menu destruction on friend join

--- a/angular-client/src/app/components/dashboard/dashboard.component.html
+++ b/angular-client/src/app/components/dashboard/dashboard.component.html
@@ -19,6 +19,13 @@
         class="start-button"
         mat-raised-button
         color="primary"
+        (click)="simulateFriendJoin()">
+        Simulate Friend Join
+      </button>
+      <button
+        class="start-button"
+        mat-raised-button
+        color="primary"
         routerLink="/babylonjs"
         (click)="start()">
         Start
