Invite logic working from user panel

--- a/angular-client/src/app/components/match-making/invite-friend-menu/invite-friend-menu.component.html
+++ b/angular-client/src/app/components/match-making/invite-friend-menu/invite-friend-menu.component.html
@@ -25,9 +25,9 @@
     <div class="friends-list">
       <button
         mat-menu-item
-        *ngFor="let friend of filteredFriends | async"
+        *ngFor="let friend of filteredFriends$ | async"
         (click)="invite(friend)">
-        {{ friend }}
+        {{ friend.username }}
       </button>
     </div>
   </div>
