Status logic for real time

--- a/angular-client/src/app/components/dashboard/dashboard.component.html
+++ b/angular-client/src/app/components/dashboard/dashboard.component.html
@@ -1,38 +1,1 @@
-<div class="grid-container">
-  <mat-grid-list cols="5" rowHeight="100%">
-    <mat-grid-tile
-      *ngFor="let panel of panels"
-      [style.background]="panel.color">
-      <app-lobby-panel
-        class="lobby-panel"
-        [friend]="panel.friend"></app-lobby-panel>
-    </mat-grid-tile>
-  </mat-grid-list>
-</div>
-<div class="bottom-div">
-  <mat-grid-list cols="3" rowHeight="100%">
-    <mat-grid-tile class="chat">
-      <app-group-chat-box class="group-chat-box"></app-group-chat-box>
-    </mat-grid-tile>
-    <mat-grid-tile class="start">
-      <button
-        class="start-button"
-        mat-raised-button
-        color="primary"
-        (click)="simulateFriendJoin()">
-        Simulate Friend Join
-      </button>
-      <button
-        class="start-button"
-        mat-raised-button
-        color="primary"
-        routerLink="/babylonjs"
-        (click)="start()">
-        Start
-      </button>
-    </mat-grid-tile>
-    <mat-grid-tile class="queue">
-      <app-queue-controls class="queue-controls"></app-queue-controls>
-    </mat-grid-tile>
-  </mat-grid-list>
-</div>
+<app-lobby></app-lobby>
