--- a/angular-client/src/app/components/match-making/lobby/lobby.component.html
+++ b/angular-client/src/app/components/match-making/lobby/lobby.component.html
@@ -12,7 +12,7 @@
 <div class="bottom-div">
   <mat-grid-list cols="3" rowHeight="100%">
     <mat-grid-tile class="chat">
-      <app-group-chat-box class="group-chat-box"></app-group-chat-box>
+      <app-lobby-chat-box class="lobby-chat-box"></app-lobby-chat-box>
     </mat-grid-tile>
     <mat-grid-tile class="start">
       <button
